Cleaned the dockerfile a bit

--- a/hortlak.conf
+++ b/hortlak.conf
@@ -1,2 +1,2 @@
 [program:hortlak]
-command="/usr/bin/mono-service --no-daemon -d:/app /app/Hortlak.exe"
+command=/usr/bin/mono-service --no-daemon -d:/app /app/Hortlak.exe
